@startuml
interface OrderCommand{
   {abstract} {method} + void execute(Order order)
}

class Order{
    {field} - String name
    {field} - int quantity
    {method} + Order(String name,int quantity)
}

class OrderOperator{
    {method} + void buy(Order order)
    {method} + void sell(Order order)
}

class BuyCommand {
    {field} - OrderOperator orderOperator
    {method} + BuyCommand(OrderOperator orderOperator)
    {method} + void execute(Order order)
}

class SellCommand {
    {field} - OrderOperator orderOperator
    {method} + SellCommand(OrderOperator orderOperator)
    {method} + void execute(Order order)
}

class Client

OrderCommand <|.. BuyCommand
OrderCommand <|.. SellCommand

Order <.. OrderCommand
Order <.. BuyCommand
Order <.. SellCommand
Order <.. OrderOperator

BuyCommand o-- OrderOperator
SellCommand o-- OrderOperator

Order <.. Client
OrderCommand <.. Client
BuyCommand <.. Client
SellCommand <.. Client
OrderOperator <.. Client


@enduml